# Agentic_AI_AGENTOPS

./: README.md  links.txt
Class1_Python_AI/: function or tools.py  oops_tutorial.py  python_fundamentals.py
Class1_Python_AI/my-first-uv-project/: main.py  pyproject.toml
Class2_Pydantic_AI/: _10_tool_with_ai_call.py  _11_agent_class_ai_only.py  _12_agent_with_one_tool.py  _13_agent_with_more_tools.py  _1_data_structures.py  _2_oops.py  _3_error_handling.py  _4_decorators.py  _5_calling_a_real_api.py  _7_ai_call_free_and_paid.py  _8_pydantic_with_ai.py  _9_api_call_with_structure.py
Class6_Langchain_basics/langchain_basics/: .gitignore  langchain_agent.py  pyproject.toml
