[project]
name = "langchain-basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.12",
    "langchain>=1.3.14",
    "langchain-anthropic>=1.5.0",
    "langchain-openai>=1.4.0",
    "python-dotenv>=1.2.2",
]
